# wiidroid

./: .gitmodules  README.md  Wiimote-Bluetooth-Protocol.txt  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/scotthamilton/wiidroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/org/scotthamilton/wiidroid/: MainActivity.kt
app/src/main/java/org/scotthamilton/wiidroid/bluetooth/: ActivityPermManager.kt  AsyncJobConsumer.kt  BluetoothHidProxyManager.kt  BluetoothScanManager.kt  HIDConstants.kt  WiimoteComponentActivity.kt  WiimoteHandler.kt  WiimoteManager.kt
app/src/main/java/org/scotthamilton/wiidroid/bluetooth/reflection/utils/: reflection_hack.kt
app/src/main/java/org/scotthamilton/wiidroid/bluetooth/utils/: BluetoothUtils.kt  WiimoteManagerUsbImpl.kt
app/src/main/java/org/scotthamilton/wiidroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/scotthamilton/wiidroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
submodules/diffs/: Android.mk.patch  apply.sh
submodules/scripts/: build_hidapi.sh
